# highlight-helper

./: .env.example  .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml
app/: __init__.py  main.py
app/api/: books.py  highlights.py  readwise.py  schemas.py  settings.py  views.py
app/core/: config.py  database.py  tracing.py
app/models/: __init__.py  book.py  highlight.py  settings.py
app/services/: book_lookup.py  highlight_extractor.py  isbn_extractor.py  readwise.py  settings.py
app/templates/: add_book.html  add_highlight.html  all_highlights.html  book_detail.html  edit_highlight.html  home.html  settings.html
app/templates/layouts/: base.html
docs/: TRACING_IMPLEMENTATION_PLAN.md
evals/: README.md  __init__.py  cli.py  models.py  report.py  runner.py  scrape_samples.py
evals/reports/: latest.html
evals/samples/: cache.json  dataset.json
scripts/: generate_cert.sh
tests/: __init__.py  conftest.py
tests/e2e/: test_user_flows.py
tests/integration/: test_api_books.py  test_api_highlights.py  test_api_readwise.py  test_views.py
tests/unit/: test_models.py  test_schemas.py  test_services.py
